# StdShit

./: .gitignore  CMakeLists.txt  Lean.bat  Lean_2.bat  Lean_3.bat  Make.bat  Make32.bat  Make64.bat  MakeLib.bat  combine.bat  combine.cc  cppblock.cc  install.bat
src/: Void.h  algorithm.h  arrayMem.h  bsearch.cc  compat.h  constexp.h  copyfill.cpp  copyfill.h  delegates.h  error.cc  macro-evil.h  macro-fest.h  math.cpp  math.h  memalloc.cpp  memalloc.h  min_max.h  nchar_ansi.cpp  nchar_undef.cpp  nchar_wide.cpp  stdshit.cc  stdshit.h  string.cpp  string.h  string8W.cxx  string8W.h  type_traits.h  utfconv.cpp  windows.h  x64bits.h  x86bits.h  xqsort.cc  xqsort.h  xstrfmt.cpp  xvector.cc  xvector.h
src/unicode/: stringA.cc  stringW.cc  windowsA.cc  windowsW.cc  xstrfmtA.cc  xstrfmtW.cc
src/windows/: utfconv.cpp  utfconv.h  windows.cpp  windows.h  windows8W.cxx  windows8W.h
src/windows/utf8-api/: _open.cpp  psapi.cpp  utf8-cmpi.cpp
tests/: algo.cc  error.cc  hello.cc  test.h
